# hellorust

./: Cargo.toml
src/: main.rs
